Completed prep-javascript-variables exercise.

--- a/prep-javascript-variables/index.html
+++ b/prep-javascript-variables/index.html
@@ -10,11 +10,11 @@
   <script>
     var fullName = 'Francis Manalang';
     console.log('Full Name:', fullName);
-    var numberOfPets = '1';
+    var numberOfPets = 1;
     console.log('Number of Pets:', numberOfPets);
-    var likesVegetables = 'False';
+    var likesVegetables = false;
     console.log('Likes Vegetables:', likesVegetables);
-    var nothing = 'null';
+    var nothing = null;
     console.log('nothing:', nothing);
     var never;
     console.log('never:', never);
